--- a/magentix2/src/test/java/TraceTest_1/README
+++ b/magentix2/src/test/java/TraceTest_1/README
@@ -5,7 +5,7 @@
 /*****************************************************************************************
 /*                                     DESCRIPTION                                       *
 /*****************************************************************************************
-    Simple test with three agents: a PUBLISHER agent and a SUBSCRIBER agent.
+    Simple test with two agents: a PUBLISHER agent and a SUBSCRIBER agent.
     
     The PUBLISHER agent publishes a tracing service called 'DD_Test_TS' which content is
     just a string. Each second, the publisher generates the trace event. After 10
