--- a/installer/magentix2/lib/README
+++ b/installer/magentix2/lib/README
@@ -1,6 +1,5 @@
 Import this library in your java projects.
 
-
-For import the library in Eclipse IDE:
+To import the library in the Eclipse IDE:
 
 Pop-up menu project -> Properties -> Java Build Path -> Libraries -> Add External JARs...
