--- a/installer/magentix2/lib/RELEASE_NOTES
+++ b/installer/magentix2/lib/RELEASE_NOTES
@@ -9,5 +9,5 @@ http://gti-ia.upv.es/sma/tools/magentix2/documents.php
 
 2.01: Solved problems with the informative SQL queries and data base connections
 
-2.03: Solved problems with the http port in BridgeAgentInOut and the HttpInterface. Add http port property in the 
+2.0.3: Added OMS normative system. Solved problems with the http port in BridgeAgentInOut and the HttpInterface. Add http port property in the 
 Settings.xml.
