refactoring the manual

--- a/doc/manual/Introduction/Introduction.tex
+++ b/doc/manual/Introduction/Introduction.tex
@@ -2,7 +2,7 @@
 \section{Motivation}
 Magentix2 is an agent platform for open Multiagent Systems. Its main objective is to bring agent technology to real domains: business, industry, logistics, e-commerce, health-care, etc.
 
-Magentix2 platform is proposed as a continuation of the Magentix platform\footnote{\url{http://users.dsic.upv.es/grupos/ia/sma/tools/Magentix/index.php}}. The final goal is to extend the functionalities of Magentix, providing new services and tools to allow the secure and optimized management of open Multiagent Systems. Nowadays, Magentix2 provides support at three levels: 
+Magentix2 platform is proposed as a continuation of the first Magentix platform. The final goal is to extend the functionalities of Magentix, providing new services and tools to allow the secure and optimized management of open Multiagent Systems. Nowadays, Magentix2 provides support at three levels: 
 
 \begin{itemize}
 	\item Organization level, technologies and techniques related to agent societies.
