--- a/doc/manual/Magentix2UserManual.tex
+++ b/doc/manual/Magentix2UserManual.tex
@@ -52,7 +52,8 @@
 
 %%%%%%% FIN FORMATO cabecera y pie
 
-
+%%%%%%%%%%%%%%%%% CONSTANTES %%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\MagentixVersion}{2.1}
 
 
 %%%%%%%%%%%%%%  FORMATO TÍTULO CAPÍTULOS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
