added missing thomas exceptions appendix

--- a/doc/manual/Magentix2UserManual.tex
+++ b/doc/manual/Magentix2UserManual.tex
@@ -23,6 +23,7 @@
 \usepackage{rotating} %Para rotar tablas y figuras
 \usepackage{amsmath, amssymb}
 \usepackage{tabulary}
+\usepackage{longtable} % tablas largas
 
 \newtheorem{definition}{Definition}[section]
 
@@ -335,7 +336,8 @@
 \clearemptydoublepage
 \include{Administration/PlatformAdminIntro}			%Intro del capítulo, primera,  segunda,tercera,cuarta,quinta Y sexta
 
-
+\appendix
+\include{Thomas/appendixExceptions}
 
 \clearemptydoublepage
 \fancyhead[LO,RE]{\textbf{Bibliography}} %pongo a mano el encabezado de esta sección
